# GenericInstsBenchmark

./: GenericInstsBenchmark.cabal
src/: Main.hs  README.markdown
