name:                GenericInstsBenchmark
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omeragacan@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable GenericInstsBenchmark
  main-is:             Main.hs
  -- other-modules:
  other-extensions:    DeriveGeneric, DeriveAnyClass
  build-depends:
    base >=4.8 && <4.9,
    binary >=0.7 && <0.8,
    bytestring,
    criterion >=1.1 && <1.2,
    deepseq >=1.4 && <1.5,
    random

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -ddump-simpl -ddump-to-file -dsuppress-idinfo -ddump-deriv
